# aivanovski.github.io

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml
posts/: functional-programming-has-been-mainstream.md
src/: error.rs  export.rs  feed.rs  main.rs  model.rs  posts.rs
src/views/: about.rs  footer.rs  header.rs  home.rs  icons.rs  mod.rs  post.rs  renderer.rs
static/: index.css  site.js
