[package]
name = "personal-blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
leptos = { version = "0.8", features = ["ssr"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
env_logger = "0.9.0"
pulldown-cmark = { version = "0.9.1", default-features = false }
ignore = "0.4"
toml = "0.5"
chrono = "0.4"
markdown-readtime = "0.1.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
